# ssr-template-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
static/: index_static.html
templates/: index_template.html  template.html
